fixing spacing issues on form pages

--- a/beam/src/Styling Sheets/AddPost.css
+++ b/beam/src/Styling Sheets/AddPost.css
@@ -1,3 +1,7 @@
 .add-post-container {
     margin: 10px auto;
 }
+
+.add-post-input {
+    width: 100%
+}
